# ClamAV-Qt

./: CHANGES  CMakeLists.txt  README  resources.qrc
extra/: ClamAV-GUI.spec  clamav-gui.desktop
icons/: .directory
src/: cfilesystemmodel.cpp  cfilesystemmodel.h  clamav_ctrl.cpp  clamav_ctrl.h  clamav_gui.cpp  clamav_gui.h  dragablepushbutton.cpp  dragablepushbutton.h  freshclamsetter.cpp  freshclamsetter.h  highlighter.cpp  highlighter.h  includeexcludeoptions.cpp  includeexcludeoptions.h  infodialog.cpp  infodialog.h  logviewerobject.cpp  logviewerobject.h  logviewobject.cpp  logviewobject.h  main.cpp  optionsdialog.cpp  optionsdialog.h  partiallogobject.cpp  partiallogobject.h  profilemanager.cpp  profilemanager.h  profilewizarddialog.cpp  profilewizarddialog.h  progressdialog.cpp  progressdialog.h  qroundprogressbar.cpp  qroundprogressbar.h  scanlimitstab.cpp  scanlimitstab.h  scantab.cpp  scantab.h  scheduler.cpp  scheduler.h  schedulescanobject.cpp  (+5 more)
translations/: clamav-gui-da_DK.qm  clamav-gui-da_DK.ts  clamav-gui-de_DE.qm  clamav-gui-de_DE.ts  clamav-gui-en_GB.qm  clamav-gui-en_GB.ts  clamav-gui-es_ES.qm  clamav-gui-es_ES.ts
ui/: clamav_ctrl.ui  clamav_gui.ui  freshclamsetter.ui  includeexcludeoptions.ui  infodialog.ui  logviewerobject.ui  logviewobject.ui  optionsdialog.ui  partiallogobject.ui  profilemanager.ui  profilewizarddialog.ui  profilewizarddialog.ui.save  progressdialog.ui  scanlimitstab.ui  scantab.ui  scheduler.ui  scheduler.ui.save  schedulescanobject.ui
